[project]
name = "python-client"
version = "0.9.1"
description = "Python bindings for the Gradient Labs API"
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "dataclasses-json>=0.6.7",
    "pytest>=8.3.4",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "ruff>=0.9.1",
    "marshmallow>=3.25.0",
]
