[project]
name = "gradient-labs"
version = "0.11.8"
description = "Python bindings for the Gradient Labs API"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "dataclasses-json>=0.6.7",
    "marshmallow>=3.26.2",
    "pytest>=8.3.4",
    "pytz>=2024.2",
    "requests>=2.33.0",
    "ruff>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["examples/tools"]

[tool.uv]
constraint-dependencies = [
    "urllib3>=2.6.3",
    "starlette>=0.49.1",
    "h11>=0.16.0",
]

[tool.ruff.lint]
ignore = ["D100", "D101"]
